src/styles/isomer-cms/elements/base.scss
@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap');
@import './variable';

body{
  font-family: 'Lato', sans-serif;
  font-size: 16px;
  background: $base-background;
  margin: 0;
  padding: 0;
  color: $body-text;
  height: 100vh;
}

a{
  text-decoration: none;
  font-size: 16px;
  color: $isomer-blue;
  padding: 0;
  margin: 0;

  &:hover{
    text-decoration: none;
    color: $isomer-blue;
  }
}

.wrapper{
  height: calc(100vh - #{$header-height});
  width: 100%;
  top: $header-height;
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;

}

h1,h2,h3,h4,h5,h6{
  font-family: 'Lato', sans-serif;
  font-weight: 700 !important;
  margin: 0;
  padding: 0;
}

i {
  color: $isomer-blue;
}

.error {
  color: $error-red;
}

span {
  font-size: 14px;
}

